make first post full width on blog page

--- a/blog/templates/blogcontent/blog.html
+++ b/blog/templates/blogcontent/blog.html
@@ -36,13 +36,17 @@
           </div>
           <div class="row well">
               {% for thumbnail_post in posts %}
-                {% if forloop.first or forloop.counter0|divisibleby:"2" %}
+                {% if forloop.first or forloop.counter|divisibleby:"2" %}
                   <div class="row">
                 {% endif %}
-                  <div class="col-sm-6">
-                    {% include "bloginclude/thumbnail_post.html" %}
+                  {% if forloop.first %}
+                    <div class="col-sm-12">
+                  {% else %}
+                    <div class="col-sm-6">
+                  {% endif %}
+                  {% include "bloginclude/thumbnail_post.html" %}
                   </div>
-                {% if forloop.last or forloop.counter|divisibleby:"2" %}
+                {% if forloop.last or forloop.counter0|divisibleby:"2" %}
                   </div>
                 {% endif %}
               {% endfor %}
