--- a/blog/templates/blogcontent/post.html
+++ b/blog/templates/blogcontent/post.html
@@ -13,72 +13,72 @@
 {% endblock %}
 
 {% block main %}
-    <div class="container margin-top">
-        <div id="post-content" class="well">
-            <div class="container">
-                <div class="col-sm-8 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-                    <div class="row">
-                        <h1 id="post-title">{{ post.title }}</h1>
-                        {% if post.image %}
-                            <img src="{{ post.image.url }}" class="img-responsive" id="post-main-image" alt="{{ post.image_description }}"/>
-                        {% endif %}
-                    </div>
-                    <div class="row">
-                        {% include 'maininclude/social_share.html' %}
-                        <div id="post-body">
-                            {{ post.body|safe }}
-                        </div>
-                        <h4 class="text-center">Read more from <a href="{{ post.blog.get_absolute_url }}">{{ post.blog }}</a></h4>
-                    </div>
-                    <div class="row">
-                        {% with post.get_prev_blog_post as thumbnail_post %}
-                          <div class="col-sm-6">
-                            {% include "bloginclude/thumbnail_post.html" %}
-                          </div>
-                        {% endwith %}
-                        {% with post.get_next_blog_post as thumbnail_post %}
-                          <div class="col-sm-6">
-                            {% include "bloginclude/thumbnail_post.html" %}
-                          </div>
-                        {% endwith %}
-                    </div>
-                    <div class="row" id="post-footer">
-                        {% include "maininclude/social_share.html" %}
-                        <h4>Written by {{ post.author.username }} on {{ post.create_date }}
-                        {% include "bloginclude/favorite.html" %}</h4>
-                        <div class="hidden-xs">
-                            {% include "google_ads/leaderboard.html" %}
-                        </div>
-                        {% if post.blog.disqus %}
-                            {% include "bloginclude/disqus.html" %}
-                        {% endif %}
-                    </div>
+  <div class="margin-top container">
+    <div id="post-content" class="well">
+      <div class="container">
+        <div class="col-sm-8">
+            <div class="row">
+                <h1 id="post-title">{{ post.title }}</h1>
+                {% if post.image %}
+                    <img src="{{ post.image.url }}" class="img-responsive" id="post-main-image" alt="{{ post.image_description }}"/>
+                {% endif %}
+            </div>
+            <div class="row">
+                {% include 'maininclude/social_share.html' %}
+                <div id="post-body">
+                    {{ post.body|safe }}
                 </div>
-                <div class="col-sm-3 hidden-xs">
-                    {% if other_posts %}
-                      <div id="other-posts">
-                        <div class="panel panel-default">
-                          <div class="panel-heading">
-                            <h2 class="text-center">Recent</h2>
-                          </div>
-                          <div class="panel-body">
-                            {% for media_post in other_posts %}
-                                {% include "bloginclude/media_post.html" %}
-                            {% endfor %}
-                          </div>
-                        </div>
-                      </div>
-                    {% endif %}
-                    <div class="margin-top">
-                      {% with post.blog as blog %}
-                        {% include "maininclude/twitter_timeline.html" %}
-                      {% endwith %}
-                    </div>
-                    <div class="margin-top">
-                        {% include "google_ads/skyscraper.html" %}
-                    </div>
+                <h4 class="text-center">Read more from <a href="{{ post.blog.get_absolute_url }}">{{ post.blog }}</a></h4>
+            </div>
+            <div class="row">
+                {% with post.get_prev_blog_post as thumbnail_post %}
+                  <div class="col-sm-6">
+                    {% include "bloginclude/thumbnail_post.html" %}
+                  </div>
+                {% endwith %}
+                {% with post.get_next_blog_post as thumbnail_post %}
+                  <div class="col-sm-6">
+                    {% include "bloginclude/thumbnail_post.html" %}
+                  </div>
+                {% endwith %}
+            </div>
+            <div class="row" id="post-footer">
+                {% include "maininclude/social_share.html" %}
+                <h4>Written by {{ post.author.username }} on {{ post.create_date }}
+                {% include "bloginclude/favorite.html" %}</h4>
+                <div class="hidden-xs">
+                    {% include "google_ads/leaderboard.html" %}
                 </div>
-             </div>
+                {% if post.blog.disqus %}
+                    {% include "bloginclude/disqus.html" %}
+                {% endif %}
+            </div>
         </div>
+        <div class="col-sm-3 hidden-xs">
+            {% if other_posts %}
+              <div id="other-posts">
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h2 class="text-center">Recent</h2>
+                  </div>
+                  <div class="panel-body">
+                    {% for media_post in other_posts %}
+                        {% include "bloginclude/media_post.html" %}
+                    {% endfor %}
+                  </div>
+                </div>
+              </div>
+            {% endif %}
+            <div class="margin-top">
+              {% with post.blog as blog %}
+                {% include "maininclude/twitter_timeline.html" %}
+              {% endwith %}
+            </div>
+            <div class="margin-top">
+                {% include "google_ads/skyscraper.html" %}
+            </div>
+        </div>
+      </div>
     </div>
+  </div>
 {% endblock %}
