--- a/static/css/style.css
+++ b/static/css/style.css
@@ -340,6 +340,9 @@ Bootstrap is not perfect. These are modifications that are applicable or
 related to existing bootstrap css rules. Make sure to load style.css after
 loading bootstrap.css so that these rules can override.
 */
+.thumbnail {
+    padding: 0;
+}
 .status-alert {
     margin:10px;
 }
