--- a/main/templates/maininclude/modals/contact.html
+++ b/main/templates/maininclude/modals/contact.html
@@ -5,12 +5,12 @@
   Help Us Improve
 {% endblock %}
 
-{% block modal_id %}feedback-modal{% endblock %}
+{% block modal_id %}contact-modal{% endblock %}
 
 {% block modal_body %}
   <form>
     {% csrf_token %}
-    {% crispy feedback_form %}
+    {% crispy contact_form %}
   </form>
 {% endblock %}
 
@@ -22,7 +22,7 @@
   <div class="modal-footer">
     <p id="form-message"></p>
     {% if not request.user.is_authenticated %}
-        <p>If you would like a response from us, please <a href="{% url 'account_login' %}">Login or Register</a></p>
+      <p>If you would like a response from us, please <a href="{% url 'account_login' %}">Login or Register</a></p>
     {% endif %}
   </div>
 {% endblock %}
