--- a/blog/templates/blogemail/newsletter.html
+++ b/blog/templates/blogemail/newsletter.html
@@ -12,16 +12,16 @@
       {% for p in posts %}
         <tr>
             <td style="width:40%">
-              <a href="{{ p.get_absolute_url }}">
+              <a href="{{ WEB_ROOT_URL }}{{ p.get_absolute_url }}">
                 <img style="width:100%; height:auto;" 
-                  src="{{ p.image.url }}" />
+                  src="http://travelblogwave.com/{% static 'img/logo_dark.png' %}" />
               </a>
             </td>
             <td style="width:60%; padding:10px;">
-              <a href="{{ p.get_absolute_url }}" style="text-decoration:none;">
+              <a href="{{ WEB_ROOT_URL }}{{ p.get_absolute_url }}" style="text-decoration:none;">
                 <h2 style="text-align: center; color:black;">{{ p.title }}</h2>
                 <p style="color:black;">{{ p.headline }}</p>
-                <p style="color:black; font-size:80%; text-align:center;">posted on {{ p.create_date }}</p> 
+                <p style="color:black; font-size:80%; text-align:center;">posted on {{ p.create_date }}</p>
               </a>
             </td>
           </a>
