--- a/main/templates/mainemail/base.html
+++ b/main/templates/mainemail/base.html
@@ -6,7 +6,7 @@
         <img style="width:100%; height:auto;" src="{{ logo_url }}" />
       </div>
       <div style="width:75%; text-align:center;">
-        <h1>
+        <h1 style="text-align: text-center;">
           {% block email_header %}{% endblock %}
         </h1>
       </div>
