--- a/blog/templates/blogcontent/blog.html
+++ b/blog/templates/blogcontent/blog.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block title %}
-  Travel Blog | {{ blog }}
+  {{ blog }} |Travel Blog
 {% endblock %}
 
 {% block extra_head %}
@@ -12,21 +12,11 @@
 
 {% block main %}
   {% autopaginate posts 7 %}
-  {# Not using this for now, but it works #}
-  {# if blog.google_id #}
-    <!--<div class="row">-->
-      <!--<img class="img-responsive" src="{{ google_data.cover.coverPhoto.url}}" />-->
-    <!--</div>-->
-  {# endif #}
-
   <div id="map-side" class="col-md-8">
     <div id="blog-header-row" class="jumbotron row">
       <div class="text-center">
         <h1>
-        {% if object.logo %}
-          <img src="{{ blog.logo.url }}" class="img-responsive img-rounded" /> 
-        {% endif %}
-        {{ object.title }}
+          {{ object.title }}
         </h1>
       </div>
     </div>
