fix main page mobile

--- a/main/templates/maincontent/home.html
+++ b/main/templates/maincontent/home.html
@@ -75,10 +75,12 @@
       </div>
     </div>
   </div>
-  <div id="recent-post-row" class="row row-padding">
-    <div class="col-sm-6 col-sm-offset-3">
-      <h2 class="text-center">Recent Posts</h2>
-      {% include "maininclude/recent_post_carousel.html" %}
+  <div class="container">
+    <div id="recent-post-row" class="row row-padding">
+      <div class="col-sm-6 col-sm-offset-3">
+        <h2 class="text-center">Recent Posts</h2>
+        {% include "maininclude/recent_post_carousel.html" %}
+      </div>
     </div>
   </div>
 {% endblock %}
