more changes to home layout

--- a/main/templates/maincontent/home.html
+++ b/main/templates/maincontent/home.html
@@ -13,7 +13,8 @@
 {% endblock %}
 
 {% block main %}
-  <div id="background" data-stellar-background-ratio="0.2"></div>
+  <div id="background" data-stellar-background-ratio="0.2" class="hidden-xs"></div>
+  <div id="background" class="hidden-sm hidden-md hidden-lg"></div>
   <div class="search-overlay">
     <div class="row">
       <p class="search-overlay-text">
