--- a/main/templates/maininclude/footer.html
+++ b/main/templates/maininclude/footer.html
@@ -1,5 +1,5 @@
 <footer id="footer" class="text-center">
-  <div class="col-md-9">
+  <div class="col-md-9 hidden-xs">
     <a href="{% url 'main-about' %}">About</a>
   </div>
   <div class="col-md-3">
