footer and home

--- a/main/templates/maincontent/home.html
+++ b/main/templates/maincontent/home.html
@@ -76,12 +76,10 @@
       </div>
     </div>
   </div>
-  <div class="container">
-    <div id="recent-post-row" class="row row-padding">
-      <div class="col-sm-6 col-sm-offset-3">
-        <h2 class="text-center">Recent Posts</h2>
-        {% include "maininclude/recent_post_carousel.html" %}
-      </div>
+  <div id="recent-post-row" class="row row-padding hidden-xs">
+    <div class="col-sm-6 col-sm-offset-3">
+      <h2 class="text-center">Recent Posts</h2>
+      {% include "maininclude/recent_post_carousel.html" %}
     </div>
   </div>
 {% endblock %}
