--- a/blog/templates/blogcontent/wave_register.html
+++ b/blog/templates/blogcontent/wave_register.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-  <div class="row jumbotron text-center">
+  <div class="jumbotron text-center">
     <h1>Create Your Wave</h1>
   </div>
   <div class="container-fluid">
