move javascript to js block super

--- a/allauth/templates/base.html
+++ b/allauth/templates/base.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>{% block head_title %}{% endblock %}</title>
-    {% block extra_head %}
+    {% block javascript %}
     {% endblock %}
   </head>
   <body>
