--- a/blog/templates/blogcontent/post_create.html
+++ b/blog/templates/blogcontent/post_create.html
@@ -5,7 +5,8 @@
   Create Travel Blog Story
 {% endblock %}
 
-{% block extra_head %}
+{% block javascript %}
+  {{ block.super }}
   {% include "maininclude/place_autocomplete.html" %}
 {% endblock %}
 
@@ -23,5 +24,4 @@
       {% crispy form %}
     </div>
   </div>
-
 {% endblock %}
