--- a/blog/templates/blogcontent/blog.html
+++ b/blog/templates/blogcontent/blog.html
@@ -6,7 +6,8 @@
   {{ blog }} |Travel Blog
 {% endblock %}
 
-{% block extra_head %}
+{% block javascript %}
+  {{ block.super }}
   <script src="{% static 'js/remove_bottom_padding.js' %}"></script>
 {% endblock %}
 
