--- a/blog/templates/blogcontent/blog.html
+++ b/blog/templates/blogcontent/blog.html
@@ -54,7 +54,7 @@
       </div>
     </div>
   </div>
-  <div id="map-container">
+  <div id="map-container" class="hidden-xs">
     {% include "bloginclude/blog_map.html" %}
     <div id="map-canvas"></div>
   </div>
