--- a/main/templates/maininclude/footer.html
+++ b/main/templates/maininclude/footer.html
@@ -1,5 +1,10 @@
-<footer id="footer" class="text-center">
-  <div class="social-icons">
-    {% include "maininclude/tbwave_social_links.html" %}
+<footer class="text-center footer-inverse">
+  <div class="container">
+    <div class="col-xs-12 col-sm-offset-4 col-sm-3 social-icons">
+      {% include "maininclude/tbwave_social_links.html" %}
+    </div>
+    <div class="hidden-xs col-sm-offset-1 col-sm-4 text-right">
+      Website by <a href="http://www.azulcloudstudio.com">Azul Cloud Studio</a>
+    </div>
   </div>
 </footer>
