change meta title for posts

--- a/blog/templates/blogcontent/post.html
+++ b/blog/templates/blogcontent/post.html
@@ -13,6 +13,10 @@
   {% endif %}
 {% endblock %}
 
+{% block meta_title %}
+  <meta name="title" content="{{ post.blog.title }} | {{ post.title }}">
+{% endblock %}
+
 {% block javascript %}
   {{ block.super }}
   <script src="{% static 'js/post_footer.js' %}"></script>
