change static loading

--- a/blog/templates/blogcontent/blog.html
+++ b/blog/templates/blogcontent/blog.html
@@ -1,6 +1,6 @@
 {% extends "bloginclude/base.html" %}
 {% load pagination_tags %}
-{% load static %}
+{% load static from staticfiles %}
 
 {% block title %}
   {{ blog }} |Travel Blog
