--- a/blog/templates/blogcontent/explore.html
+++ b/blog/templates/blogcontent/explore.html
@@ -1,5 +1,5 @@
 {% extends "bloginclude/base.html" %}
-{% load static %}
+{% load static from staticfiles %}
 
 {% block title %}
   Search Travel Blogs
