--- a/blog/templates/blogemail/newsletter.html
+++ b/blog/templates/blogemail/newsletter.html
@@ -1,5 +1,5 @@
 {% extends "mainemail/base.html" %}
-{% load static %}
+{% load static from staticfiles %}
 
 {% block email_header %}
     New Posts from {{ blog }}
