--- a/internal/templates/internalinclude/header.html
+++ b/internal/templates/internalinclude/header.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static from staticfiles %}
 
 <nav class="navbar navbar-inverse" id="navbar-main" role="navigation">
   <div class="container">
