--- a/main/templates/maininclude/share_logos.html
+++ b/main/templates/maininclude/share_logos.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static from staticfiles %}
 <!-- twitter share -->
 <li>
   <a target="_blank" href="https://twitter.com/intent/tweet?hashtags=tbwave&original_referer={{ request.get_absolute_uri }}&tw_p=tweetbutton&url={{ request.get_absolute_uri }}&via=travelblogwave">
