--- a/blog/templates/blogcontent/post.html
+++ b/blog/templates/blogcontent/post.html
@@ -1,5 +1,5 @@
 {% extends "bloginclude/base.html" %}
-{% load static %}
+{% load static from staticfiles %}
 {% load crispy_forms_tags %}
 
 {% block title %}
