--- a/blog/templates/bloginclude/blog_map.html
+++ b/blog/templates/bloginclude/blog_map.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static from staticfiles %}
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key={{ google_api_key }}"></script>
 <script type="text/javascript" src="{% static 'js/oms.min.js' %}"></script>
 <script type="text/javascript">
