--- a/main/templates/maincontent/home.html
+++ b/main/templates/maincontent/home.html
@@ -1,5 +1,5 @@
 {% extends "maininclude/base.html" %}
-{% load static %}
+{% load static from staticfiles %}
 
 {% block title %}
   Travel Blog Wave | Create and Search Travel Blogs
