--- a/main/templates/maininclude/header.html
+++ b/main/templates/maininclude/header.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static from staticfiles %}
 
 <nav class="navbar navbar-inverse" id="navbar-main" role="navigation">
   <div class="container">
