--- a/main/templates/maininclude/place_autocomplete.html
+++ b/main/templates/maininclude/place_autocomplete.html
@@ -8,8 +8,10 @@
 
     google.maps.event.addListener(autocomplete, 'place_changed', function () {
       // set the place_id field to the Google Place ID
-      var place = autocomplete.getPlace();
-      document.getElementById('id_place_id').value = place.place_id;
+      var place = autocomplete.getPlace(),
+          place_id = place.place_id;
+
+      $("#home-search").attr("href", "/explore/map/" + place_id + "/")
     });
    }
    google.maps.event.addDomListener(window, 'load', initialize);
