--- a/main/templates/maincontent/about.html
+++ b/main/templates/maincontent/about.html
@@ -56,7 +56,7 @@
           <li>Search blog posts on a map</li>
         </ul>
         <div class="text-center">
-          <h1><a class="btn btn-primary btn-lg" href="{% url 'blog-explore' %}">Begin Your Search
+          <h1><a class="btn btn-primary btn-lg" href="{% url 'blog-recent-posts' %}">Begin Your Search
             <span class="glyphicon glyphicon-search"></span></a></h1>
         </div>
         </div>
