--- a/main/templates/maininclude/header.html
+++ b/main/templates/maininclude/header.html
@@ -25,11 +25,8 @@
         {% include "maininclude/modals/contact.html" %}
       {% endif %}
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="{% url 'blog-explore' %}" class="active">
-          <span class="glyphicon glyphicon-search" ></span> EXPLORE</a>
-        </li>
-        <li><a href="{% url 'blog-wave' %}">
-          <span class="glyphicon glyphicon-th-list" ></span> WAVE</a>
+        <li><a href="{% url 'blog-recent-posts' %}" class="active">
+          <span class="glyphicon glyphicon-refresh" ></span> LATEST</a>
         </li>
         <li class="hidden-sm"><a href="#" data-target="#contact-modal" data-toggle="modal">
           <span class="glyphicon glyphicon-envelope" ></span> CONTACT</a>
