--- a/main/templates/maincontent/home.html
+++ b/main/templates/maincontent/home.html
@@ -63,7 +63,7 @@
               </p>
           </div>
         </a>
-        <a class="brand" href="{% url 'blog-explore' %}">
+        <a class="brand" href="{% url 'blog-recent-posts' %}">
           <div class="col-md-4">
               <h3>Read Travel Stories</h3>
               <span class="glyphicon glyphicon-book"></span>
@@ -72,7 +72,7 @@
               </p>
           </div>
         </a>
-        <a class="brand" href="{% url 'blog-explore' %}">
+        <a class="brand" href="{% url 'blog-recent-posts' %}">
           <div class="col-md-4">
               <h3>Travel Information</h3>
               <span class="glyphicon glyphicon-plane"></span>
