simplify explore page

--- a/main/templates/maincontent/home.html
+++ b/main/templates/maincontent/home.html
@@ -32,7 +32,7 @@
   <section class="search-overlay">
     <div class="row">
       <p class="search-overlay-text">
-        Where do you want to know about?
+        Travel articles based on City, Country or Region
       </p>
     </div>
     <div class="row">
