--- a/main/templates/maininclude/base.html
+++ b/main/templates/maininclude/base.html
@@ -52,6 +52,18 @@
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
       {% endif %}
       <script src="{% static 'js/script.js' %}"></script>
+
+      {% if userreport_key %}
+        <script type="text/javascript">
+          var _urq = _urq || [];
+          _urq.push(['initSite', {{ userreport_key }}]);
+          (function() {
+          var ur = document.createElement('script'); ur.type = 'text/javascript'; ur.async = true;
+          ur.src = ('https:' == document.location.protocol ? 'https://cdn.userreport.com/userreport.js' : 'http://cdn.userreport.com/userreport.js');
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ur, s);
+          })();
+        </script>
+      {% endif %}
     {% endblock %}
   </body>
 </html>
