wrap userreport key

--- a/main/templates/maininclude/base.html
+++ b/main/templates/maininclude/base.html
@@ -56,7 +56,7 @@
       {% if userreport_key %}
         <script type="text/javascript">
           var _urq = _urq || [];
-          _urq.push(['initSite', {{ userreport_key }}]);
+          _urq.push(['initSite', '{{ userreport_key }}']);
           (function() {
           var ur = document.createElement('script'); ur.type = 'text/javascript'; ur.async = true;
           ur.src = ('https:' == document.location.protocol ? 'https://cdn.userreport.com/userreport.js' : 'http://cdn.userreport.com/userreport.js');
