--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,483 +1,430 @@
 /* Colors Light to Dark #B1D0DD, #588497, #27576B, #092F3F, #010E13 */
-
 /***** General *****/
 /* sticky footer */
 html, body {
-    height: 100%;
-}
+  height: 100%; }
+
 #wrap {
-    min-height: 100%;
-}
+  min-height: 100%; }
+
 #main {
-	padding-bottom: 180px;
-	height:100%;
-}
+  padding-bottom: 180px;
+  height: 100%; }
+
 /* must be same height as the footer */
 footer {
-    position: relative;
-	margin-top: -180px; /* negative value of footer height */
-	height: 180px;
-	clear:both;
-	padding: 50px;
-    color: white;
-    background-color:#010E13;
-}
-footer a:link,
-footer a:visited {
-    color: #eee;
-}
+  position: relative;
+  margin-top: -180px;
+  /* negative value of footer height */
+  height: 180px;
+  clear: both;
+  padding: 50px;
+  color: white;
+  background-color: #010E13; }
+  footer a:link,
+  footer a:visited {
+    color: #eee; }
 
 /* end sticky footer */
-
 html {
-    font-family: "Open Sans", sans-serif;
-}
+  font-family: "Open Sans", sans-serif; }
+
 h1, h2 {
-    font-weight: 300;
-}
+  font-weight: 300; }
+
 legend h1 {
-    text-align:center;
-}
+  text-align: center; }
+
 #wrap {
-    padding-bottom:25px;
-}
+  padding-bottom: 25px; }
+
 .no-padding {
-    padding:0;
-}
+  padding: 0; }
+
 .transition {
-    transition: all 1.0s ease;
-}
+  transition: all 1.0s ease; }
+
 .grow, #other-posts img, .social-buttons img {
-    transition: all 0.5s ease-out;
-}
+  transition: all 0.5s ease-out; }
+
 .grow:hover {
-    font-size: 120%;
-    font-weight: 100;
-}
+  font-size: 120%;
+  font-weight: 100; }
+
 #navbar-main {
-    border-radius:0;
-    background-color:#010E13;
-    margin-bottom:0;
-}
-#navbar-main li a:visited,
- #navbar-main li a:link {
-    color:#fff;
-}
-#navbar-main li.dropdown li a:visited,
- #navbar-main li.dropdown li a:link {
-    color:#010E13;
-}
+  border-radius: 0;
+  background-color: #010E13;
+  margin-bottom: 0; }
+  #navbar-main li a:visited,
+  #navbar-main li a:link {
+    color: #fff; }
+  #navbar-main li.dropdown li a:visited,
+  #navbar-main li.dropdown li a:link {
+    color: #010E13; }
+
 #navbar-main li a:hover,
 footer a:hover {
-    color:#B1D0DD;
-}
+  color: #B1D0DD; }
+
 .fb-like {
-    padding-top:15px;
-}
+  padding-top: 15px; }
 
 #navbar-profile-img {
-    height:40px;
-    margin:5px;
-}
+  height: 40px;
+  margin: 5px; }
+
 .navbar-header img {
-    height:40px;
-}
-a.brand {
-    text-decoration:none;
-    color: #010E13;
-}
-a.brand:hover {
-    color: #588497;
-}
-a.brand-light,
-.account-container a {
-    color: #588497;
-}
+  height: 40px; }
+
 img {
-    margin-left:auto;
-    margin-right:auto;
-}
-.post-list-container  {
-    padding:30px;
-}
-.post-list-container img {
-    opacity:0.9;
-}
-.post-list-container img:hover {
-    opacity:1;
-}
+  margin-left: auto;
+  margin-right: auto; }
+
 #background {
-    background-image: url("http://dev.travelblogwave.media.s3.amazonaws.com/img/front.jpg");
-    background-size: cover;
-    height:600px;
-    width:100%;
-}
+  background-image: url("http://dev.travelblogwave.media.s3.amazonaws.com/img/front.jpg");
+  background-size: cover;
+  height: 600px;
+  width: 100%; }
+
 .info-row span {
-    font-size:500%;
-    margin:25px 0;
-}
-.favorite {
-    cursor:pointer;
-}
-.social-buttons img,
-.social-icons img {
-    opacity:0.7;
-}
-.social-buttons img:hover,
-.social-icons img:hover {
-    opacity:1
-}
-.social-buttons > div {
-    text-align: center;
-}
-.social-icons img {
-    display:inline;
-    width: 50px;
-}
-.social-icons {
-    display:inline;
-}
+  font-size: 500%;
+  margin: 25px 0; }
+
 .margin-top {
-    margin-top:20px;
-}
-#recent-carousel .carousel-inner img {
-}
+  margin-top: 20px; }
+
 #recent-post-row {
-    background-color:#eee;
-    margin-bottom: -30px;
-    padding-bottom: 60px;
-}
-#recent-post-row h2 {
-    font-size:300%;
-    margin-bottom:20px;
-}
+  background-color: #eee;
+  margin-bottom: -30px;
+  padding-bottom: 60px; }
+  #recent-post-row h2 {
+    font-size: 300%;
+    margin-bottom: 20px; }
 
 .adsbygoogle {
-    text-align:center;
-    margin-left:auto;
-    margin-right:auto;
-}
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto; }
 
 .img-info-window {
-    width: 100%;
-}
+  width: 100%; }
 
-@media(max-width:768px) {
-    #navbar-main li.dropdown li a:visited,
-    #navbar-main li.dropdown li a:link {
-        color:#fff;
-    }
-    .img-info-window {
-        max-width: 150px;
-    }
-}
+/***** social *****/
+.social-buttons img, .social-icons img {
+  opacity: 0.7; }
+  .social-buttons img:hover, .social-icons img:hover {
+    opacity: 1; }
 
+.social-buttons > div {
+  text-align: center; }
 
+.social-icons {
+  display: inline; }
+  .social-icons img {
+    display: inline;
+    width: 50px; }
 
-/***** JQuery Autocomplete *****/
-.ui-menu-item {
-    background-color:#fff;
-    border-bottom: 1px solid #eeeeee;
-    padding:5px;
-}
-.ui-menu-item:hover {
-    background-color:#eee;
-}
-.ui-autocomplete {
-    list-style-type: none;
-    padding-left:0;
-    width:1px;
-    /* I don't know why, but width of any px puts it to be the size of the input */
-}
+/***** Forms *****/
+.form-group div.checkbox {
+  padding-top: 15px; }
 
+@media (max-width: 768px) {
+  #navbar-main li.dropdown li a:visited,
+  #navbar-main li.dropdown li a:link {
+    color: #fff; }
+
+  .img-info-window {
+    max-width: 150px; } }
 /***** Search *****/
 /*
 Styles that apply to search functionality. These searches are applied mainly on
 the home page and the explore page.
 */
 .search-overlay {
-    position: absolute;
-    background: rgba(61,62,66,0.7);
-    left:50%;
-    margin-left:-500px;
-    top: 250px;
-    width: 1000px;
-    padding:50px;
-    border-radius:5px;
-    transition: all 0.5s ease-out;
-}
+  position: absolute;
+  background: rgba(61, 62, 66, 0.7);
+  left: 50%;
+  margin-left: -500px;
+  top: 250px;
+  width: 1000px;
+  padding: 50px;
+  border-radius: 5px;
+  transition: all 0.5s ease-out; }
+
+.search-overlay-text {
+  color: white;
+  font-size: 220%;
+  font-weight: 300;
+  text-align: center; }
+
 .search-overlay input,
 #explore-search-box input {
-    width:100%;
-    display: block-inline;
-    text-align: center;
-    font-size: 150%;
-    border:0;
-    border-radius:5px;
-}
-.search-overlay-text {
-    color:white;
-    font-size:220%;
-    font-weight:300;
-    text-align: center;
-}
+  width: 100%;
+  display: block-inline;
+  text-align: center;
+  font-size: 150%;
+  border: 0;
+  border-radius: 5px; }
+
 #explore-search-box-row {
-    background: rgba(61,62,66,0.7);
-}
+  background: rgba(61, 62, 66, 0.7); }
+
 .explore-search-padding {
-    /* applied when the explore search bar turns to fixed */
-    padding-top: 83px;
-}
+  /* applied when the explore search bar turns to fixed */
+  padding-top: 83px; }
+
 .fixed-top {
-    position:fixed;
-    top:0;
-    width:100%;
-    z-index:100;
-}
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 100; }
+
 #explore-container > div.row:nth-of-type(odd),
-#wave-posts > div.row:nth-of-type(odd){
-    background-color:#eee;
-    border-radius: 5px;
-}
+#wave-posts > div.row:nth-of-type(odd) {
+  background-color: #eee;
+  border-radius: 5px; }
+
 #explore-container {
-    margin-top: 30px;
-}
+  margin-top: 30px; }
 
-@media (max-width:992px) {
-    .search-overlay {
-        margin-left:-350px;
-        top: 150px;
-        width: 700px;
-    }
-}
-@media (max-width:768px) {
-    .search-overlay {
-        margin-left:-150px;
-        top: 150px;
-        width: 300px;
-    }
-    .search-overlay.drop {
-        top: 400px;
-    }
-    .search-overlay-text {
-        font-size: 150%;
-    }
-    #search-overlay-form > div ,
-    #explore-search-box form > div {
-        margin-top:15px;
-    }
-    .explore-search-padding {
-        padding-top: 192px;
-    }
-}
+@media (max-width: 992px) {
+  .search-overlay {
+    margin-left: -350px;
+    top: 150px;
+    width: 700px; } }
+@media (max-width: 768px) {
+  .search-overlay {
+    margin-left: -150px;
+    top: 150px;
+    width: 300px; }
+    .search-overlay .drop {
+      top: 400px; }
 
+  .search-overlay-text {
+    font-size: 150%; }
 
-/***** Blog *****/
+  #search-overlay-form > div,
+  #explore-search-box form > div {
+    margin-top: 15px; }
+
+  .explore-search-padding {
+    padding-top: 192px; } }
 /*
 Styles that are applied to general blogs. These styles are typically NOT
 applied to individual blog posts, those are defined int he Post section
 */
+/***** Map *****/
 #map-canvas {
-    height: 100%;
-    width: 100%;
-}
+  height: 100%;
+  width: 100%; }
+
 #map-container {
-    height: 100%;
-    float:right;
-    overflow:hidden;
-}
+  height: 100%;
+  float: right;
+  overflow: hidden; }
+
 #map-side {
-    overflow:scroll;
-    height:100%;
-}
+  overflow: scroll;
+  height: 100%; }
+
 .infowindow-title {
-    text-align: center;
-}
+  text-align: center; }
+
 #map-canvas a:hover {
-    text-decoration:none;
-}
+  text-decoration: none; }
 
-#blog-header-row img {
-    max-height: 100px;
-    display: inline;
-}
+/***** Blog *****/
 #blog-container {
-    height:100%;
-}
-#blog-header-row {
-    margin-bottom:0;
-}
+  height: 100%; }
 
+#blog-header-row {
+  margin-bottom: 0; }
+  #blog-header-row img {
+    max-height: 100px;
+    display: inline; }
 
 /***** Post *****/
 /*
 css styles that are specific to individual posts
 */
+.post-list-container {
+  padding: 30px; }
+  .post-list-container img {
+    opacity: 0.9; }
+    .post-list-container img:hover {
+      opacity: 1; }
+
 #post-title {
-    text-align: center;
-}
+  text-align: center; }
 
 #post-body img {
-    display:block;
-    width:100%;
-    max-width:100%;
-    height:auto;
-}
-#post-body .img-half {
-    width:50%;
-    float:right;
-    margin-left: 20px ;
-    margin-bottom: 20px ;
-}
+  display: block;
+  width: 100%;
+  max-width: 100%;
+  height: auto; }
 #post-body .caption {
-    text-align: center;
-    font-style: italic;
-}
-#post-main-image {
-    margin-left:auto;
-    margin-right:auto;
-    padding:20px;
-    border-radius:26px;
-    max-height:600px;
-}
-#post-footer {
-    padding:30px 0;
-}
-.no-pic {
-    height:150px;
-}
-#other-posts img:hover {
-    opacity:1;
-}
-#other-posts img {
-    opacity: 0.8;
-}
-@media(max-width:768px) {
-    #post-body .img-half {
-        display: none;
-    }
-}
+  text-align: center;
+  font-style: italic; }
+#post-body .img-half {
+  width: 50%;
+  float: right;
+  margin-left: 20px;
+  margin-bottom: 20px; }
 
-/***** Bootstrap Extensions *****/
-/*
-Bootstrap is not perfect. These are modifications that are applicable or
-related to existing bootstrap css rules. Make sure to load style.css after
-loading bootstrap.css so that these rules can override.
-*/
+#post-main-image {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+  border-radius: 26px;
+  max-height: 600px; }
+
+#post-footer {
+  padding: 30px 0; }
+
+.no-pic {
+  height: 150px; }
+
+#other-posts img {
+  opacity: 0.8; }
+  #other-posts img:hover {
+    opacity: 1; }
+
+@media (max-width: 768px) {
+  #post-body .img-half {
+    display: none; } }
+/***** Registration *****/
+.account-container {
+  text-align: center; }
+
+.account-container input {
+  font-size: 200%; }
+
+.socialaccount_ballot img {
+  margin: 15px;
+  display: inline; }
+
+.login-or {
+  margin-bottom: 15px;
+  font-size: 150%; }
+
+.account-container input {
+  border-radius: 5px;
+  text-align: center;
+  border: 2px solid #eeeeee; }
+
+.account-container ul {
+  list-style-type: none; }
+
+.account-container ul.errorlist li {
+  color: red;
+  padding-left: 0; }
+
+@media (max-width: 768px) {
+  .account-container input {
+    font-size: 120%; } }
+/***** JQuery Autocomplete *****/
+.ui-menu-item {
+  background-color: #fff;
+  border-bottom: 1px solid #eeeeee;
+  padding: 5px; }
+  .ui-menu-item:hover {
+    background-color: #eee; }
+
+.ui-autocomplete {
+  /* I don't know why, but width of any px puts it to be the size of the input */
+  list-style-type: none;
+  padding-left: 0;
+  width: 1px; }
+
+a.brand {
+  text-decoration: none;
+  color: #010E13; }
+
+a.brand:hover {
+  color: #588497; }
+
+a.brand-light,
+.account-container a {
+  color: #588497; }
+
+/***** General *****/
 .thumbnail {
-    padding: 0;
-}
+  padding: 0; }
+
 .status-alert {
-    margin:10px;
-}
+  margin: 10px; }
+
 .container-padding {
-    padding: 25px 0;
-}
+  padding: 25px 0; }
+
 .row-padding {
-    padding: 25px 0;
-}
+  padding: 25px 0; }
+
+.no-gutter {
+  padding-right: 0;
+  padding-left: 0; }
+
+.full-height {
+  height: 100%; }
+
+/***** Jumbotron *****/
 .jumbotron {
-    background-color: #B1D0DD;
-}
+  background-color: #B1D0DD; }
+  .jumbotron h3 {
+    font-size: 30px; }
+
 .jumbotron-clear {
-    background-color: inherit;
-}
-.jumbotron h3 {
-    font-size:30px;
-}
+  background-color: inherit; }
+
+/***** Nav *****/
+.nav img {
+  height: 30px; }
+
 .navbar-brand {
-    padding:5px;
-}
+  padding: 5px; }
+
 .navbar li {
-    font-size: 150%;
-    font-weight: 300;
-}
-.navbar-nav>li.label {
-    padding-top: 15px;
-    padding-bottom: 15px;
-}
+  font-size: 150%;
+  font-weight: 300; }
+
+.navbar-nav > li.label {
+  padding-top: 15px;
+  padding-bottom: 15px; }
+
+/***** Buttons *****/
 .btn-primary {
-    background-color: #27576B;
-    border-color: #27576B;
-}
-.btn-primary:hover {
+  background-color: #27576B;
+  border-color: #27576B; }
+  .btn-primary:hover {
     background-color: #588497;
-    border-color: #588497;
-}
+    border-color: #588497; }
+
+/***** Panels *****/
 .panel-default > div.panel-heading {
-    background-color:#B1D0DD;
-}
+  background-color: #B1D0DD; }
+
 .panel-title {
-    text-align:center;
-}
+  text-align: center; }
+
+/***** Modals *****/
 .modal-header {
-    background-color: #B1D0DD;
-    border-top-right-radius: 5px;
-    border-top-left-radius: 5px;
-}
+  background-color: #B1D0DD;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px; }
+
 .modal-footer {
-    background-color: #B1D0DD;
-    border-bottom-right-radius: 5px;
-    border-bottom-left-radius: 5px;
-}
+  background-color: #B1D0DD;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px; }
+
+/***** Alerts *****/
 .alert-brand {
   color: black;
   background-color: #B1D0DD;
-  border-color: #B3D2DF;
-}
-.alert-brand hr {
-  border-top-color: #c9e2b3;
-}
-.alert-brand .alert-link {
-  color: black;
-}
-.nav img {
-    height: 30px;
-}
-.no-gutter {
-    padding-right:0;
-    padding-left:0;
-}
-.full-height {
-    height: 100%;
-}
+  border-color: #B3D2DF; }
+  .alert-brand hr {
+    border-top-color: #c9e2b3; }
+  .alert-brand .alert-link {
+    color: black; }
 
-
-/***** Forms *****/
-.form-group div.checkbox {
-    padding-top:15px;
-}
-
-
-/***** Registration *****/
-.account-container {
-    text-align:center;
-}
-.account-container input {
-    font-size:200%;
-}
-.socialaccount_ballot img {
-    margin:15px;
-    display:inline;
-}
-.login-or {
-    margin-bottom:15px;
-    font-size:150%;
-}
-.account-container input {
-    border-radius:5px;
-    text-align:center;
-    border: 2px solid #eeeeee;
-}
-.account-container ul {
-    list-style-type:none;
-}
-.account-container ul.errorlist li {
-    color:red;
-    padding-left:0;
-}
-@media(max-width:768px) {
-    .account-container input {
-        font-size:120%;
-    }
-}
+/*# sourceMappingURL=style.css.map */
