post footer transparent

--- a/static/css/scss/_blog.scss
+++ b/static/css/scss/_blog.scss
@@ -76,6 +76,9 @@ css styles that are specific to individual posts
 	  margin-bottom: 20px ;
 	}
 }
+#post-fixed-footer {
+  background-color: $dark-transparent;
+}
 #post-main-image {
   margin-left:auto;
   margin-right:auto;
