--- a/static/css/scss/_general.scss
+++ b/static/css/scss/_general.scss
@@ -18,7 +18,7 @@ footer {
   clear:both;
   padding: 50px;
   color: white;
-  background-color:#010E13;
+  background-color: $dark-transparent;
 
   a:link,
   a:visited {
