--- a/static/css/scss/_variables.scss
+++ b/static/css/scss/_variables.scss
@@ -1,1 +1,10 @@
 /* Colors Light to Dark #B1D0DD, #588497, #27576B, #092F3F, #010E13 */
+
+$brand-lightest: #B1D0DD;
+$brand-light: #588497;
+$brand-medium: #27576B;
+$brand-dark: #092F3F;
+$brand-darkest: #010E13;
+
+$medium-transparent: rgba(61,62,66,0.7);
+$dark-transparent: rgba(0,0,0,0.8);
