remove ugly grow

--- a/static/css/scss/_variables.scss
+++ b/static/css/scss/_variables.scss
@@ -8,3 +8,5 @@ $brand-darkest: #010E13;
 
 $medium-transparent: rgba(61,62,66,0.7);
 $dark-transparent: rgba(0,0,0,0.8);
+
+$transition: all 1.0s ease;
