--- a/blog/templates/bloginclude/thumbnail_post.html
+++ b/blog/templates/bloginclude/thumbnail_post.html
@@ -7,7 +7,7 @@
   <div class="caption">
     <h3>{{ thumbnail_post.title }}</h3>
     <p>{{ thumbnail_post.headline }}</p>
-    <p class="text-center grow"><a href="{{ thumbnail_post.get_absolute_url }}" class="btn btn-primary grow" role="button">Read <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+    <p class="text-center"><a href="{{ thumbnail_post.get_absolute_url }}" class="btn btn-primary" role="button">Read <span class="glyphicon glyphicon-chevron-right"></span></a></p>
   </div>
   </div>
 {% endif %}
