--- a/static/css/scss/_brand.scss
+++ b/static/css/scss/_brand.scss
@@ -1,11 +1,11 @@
 a.brand {
     text-decoration:none;
-    color: #010E13;
+    color: $brand-darkest;
 }
 a.brand:hover {
-    color: #588497;
+    color: $brand-light;
 }
 a.brand-light,
 .account-container a {
-    color: #588497;
+    color: $brand-light;
 }
