--- a/main/templates/maincontent/home.html
+++ b/main/templates/maincontent/home.html
@@ -53,33 +53,33 @@
         <h1>Travel Blogs Made Simple</h1>
       </div>
       <div class="row row-padding info-row">
-        <a class="brand" href="{% url 'blog-create' %}">
+        <a href="{% url 'blog-create' %}">
           <div class="col-md-4">
-              <h3>Create Your Blog</h3>
-              <span class="glyphicon glyphicon-edit"></span>
-              <p>
-                Easily create your own blog and reap the benefits of joining the best
-                travel blog community
-              </p>
+            <h3>Create Your Blog</h3>
+            <span class="glyphicon glyphicon-edit"></span>
+            <p>
+              Easily create your own blog and reap the benefits of joining the best
+              travel blog community
+            </p>
           </div>
         </a>
         <a class="brand" href="{% url 'blog-recent-posts' %}">
           <div class="col-md-4">
-              <h3>Read Travel Stories</h3>
-              <span class="glyphicon glyphicon-book"></span>
-              <p>
-                Sort travel blogs by city, country, or topic to find what you're looking for
-              </p>
+            <h3>Read Travel Stories</h3>
+            <span class="glyphicon glyphicon-book"></span>
+            <p>
+              Sort travel blogs by city, country, or topic to find what you're looking for
+            </p>
           </div>
         </a>
         <a class="brand" href="{% url 'blog-recent-posts' %}">
           <div class="col-md-4">
-              <h3>Travel Information</h3>
-              <span class="glyphicon glyphicon-plane"></span>
-              <p>
-                There are many places to get travel information, but if you want in-depth
-                information from <u>real</u> travelers, you found the right place
-              </p>
+            <h3>Travel Information</h3>
+            <span class="glyphicon glyphicon-plane"></span>
+            <p>
+              There are many places to get travel information, but if you want in-depth
+              information from <u>real</u> travelers, you found the right place
+            </p>
           </div>
         </a>
       </div>
