--- a/static/css/scss/_variables.scss
+++ b/static/css/scss/_variables.scss
@@ -9,4 +9,4 @@ $brand-darkest: #010E13;
 $medium-transparent: rgba(61,62,66,0.7);
 $dark-transparent: rgba(0,0,0,0.8);
 
-$transition: all 1.0s ease;
+$transition: all 0.3s ease-in-out;
