--- a/static/css/scss/_variables.scss
+++ b/static/css/scss/_variables.scss
@@ -10,3 +10,5 @@ $medium-transparent: rgba(61,62,66,0.7);
 $dark-transparent: rgba(0,0,0,0.8);
 
 $transition: all 0.3s ease-in-out;
+$border-radius: 5px;
+$border-radius-lg: 10px;
